[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcemu"
version = "0.2.4"
description = "Minecraft command emulator library"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "OguzhanUmutlu"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/OguzhanUmutlu/mcemu"

[project.scripts]
mcemu = "mcemu.emulator:start_repl"
